[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine_simulator"
version = "0.1.0"
description = "Simulate a engine and calulates the speed of vehicle based either on closed loop or open loop model"
readme = "README.rst"
authors = [
  {name = "Noopura Hasa Krishna", email = "noopurahasa@gmail.com"}
]
maintainers = [
  {name = "Noopura Hasa Krishna", email = "noopurahasa@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/noopurahasa/engine_simulator/issues"
changelog = "https://github.com/noopurahasa/engine_simulator/blob/master/changelog.md"
homepage = "https://github.com/noopurahasa/engine_simulator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

